--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ gunicorn = "*"
 newrelic = "*"
 django-configurations = "*"
 dj-database-url = "*"
+whitenoise = "*"
 
 [dev-packages]
 pytest-django = "*"
